Fixed /plugins/dotnet to fit recent changes made to the robot repository.